<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="main"
            type="com.crecre.admin.uis.MainActivity" />
    </data>

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".uis.MainActivity">

        <Button
            android:id="@+id/btn_main_vote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/selector_default_button"
            android:onClick="voteBtnClick"
            android:text="@string/vote"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_main_board"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/selector_default_button"
            android:onClick="boardBtnClick"
            android:text="@string/board"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_main_creator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/selector_default_button"
            android:onClick="creatorBtnClick"
            android:text="@string/creator"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_main_hashtag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/selector_default_button"
            android:onClick="hashtagBtnClick"
            android:text="@string/hashtag"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_main_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/selector_default_button"
            android:onClick="categoryBtnClick"
            android:text="@string/category"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

    </LinearLayout>
</layout>