<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!--크리크리 로고-->
    <ImageView
        android:id="@+id/img_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="186dp"
        android:src="@drawable/crecre_icon" />

    <View
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/login_background" />

    <RelativeLayout
        android:id="@+id/rl_input_login_act"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_login_logo"
        android:layout_marginHorizontal="72dp"
        android:layout_marginTop="34dp"
        android:orientation="vertical">

        <!--아이디 editText-->
        <EditText
            android:id="@+id/edit_login_id"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/img_id_off"
            android:hint="@string/id"
            android:inputType="textEmailAddress"
            android:paddingLeft="12dp"
            android:text="crecre"
            android:textColorHint="#aaaaaa"
            android:textCursorDrawable="@null"
            android:textSize="12sp" />

        <!--비밀번호-->
        <EditText
            android:id="@+id/edit_login_passwd"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_below="@+id/edit_login_id"
            android:text="crecre"
            android:layout_marginTop="12dp"
            android:background="@drawable/img_id_off"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="12dp"
            android:textColorHint="#aaaaaa"
            android:textCursorDrawable="@null"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_login_sign_in"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_below="@+id/edit_login_passwd"
            android:layout_marginTop="32dp"
            android:background="@drawable/login_submit_background_selector"
            android:text="@string/signin"
            android:textColor="@drawable/login_btn_text_selector"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/txt_login_not_yet_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login_sign_in"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:text="@string/notYetAccount"
            android:textColor="#aaaaaa"
            android:textSize="12sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_login_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_login_not_yet_member"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/signupInAMinute"
            android:textColor="@color/violet_pink"
            android:textSize="12sp"
            android:visibility="gone" />

    </RelativeLayout>

</RelativeLayout>